--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+      <!-- navbar -- Artem -->
+ 
     <nav>
         <div class="menu-btn">
           <div class="line line--1"></div>
@@ -32,6 +34,11 @@
         <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
         <a href="https://codepen.io/dev_loop/" target="_blank"><i class="fab fa-codepen"></i></a>
       </div>
+
+         <!-- top-body -- Pablo -->
+    <!-- middle-body -- Ashley -->
+    <!-- bottom-body -- Mat -->
+    <!-- footer -- Andre -->
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
