--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- top-body -- Pablo -->
     <!-- middle-body -- Ashley -->
+    <p> testing to see if works</p>
     <!-- bottom-body -- Mat -->
     <!-- footer -- Andre -->
 </body>
