Basic shell of Matiny's part

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="mid-body.css">
 </head>
 <body>
       <!-- navbar -- Artem -->
@@ -13,8 +14,19 @@
 
     <!-- top-body -- Pablo -->
     <!-- middle-body -- Ashley -->
-    <p> testing to see if works</p>
-    <!-- bottom-body -- Mat -->
+    <section class="body-mid">
+      <div class="service-details">
+        <h2>SERVICE DETAILS</h2>
+      </div>
+      <div class="carousel">
+        <div class="recipe-item"></div>
+        <div class="recipe-item"></div>
+        <div class="recipe-item"></div>
+        <div class="recipe-item"></div>
+        <div class="recipe-item"></div>
+        <div class="recipe-item"></div>
+      </div>
+    </section>
     <!-- footer -- Andre -->
 </body>
 <script type="text/javascript" src="script.js"></script>
